5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1582_996.log
== TEST (2019-03-12 17:37:37) 
-- CODE:
print(" ")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print(" ")
-- OUTPUT:
(* o o *)
*  ^  *
* --- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:03) 
-- CODE:
print(" ")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print(" ")
-- OUTPUT:
(* o o *)
*  ^  *
* --- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:31) 
-- CODE:
print(" ")
print("(* o o *)")
 print ("*  ^  *")
print ("* --- *")
print(" ")
-- ERROR:
File "XXXX", line 3
    print ("*  ^  *")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:04) 
-- CODE:
print(" ")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print(" ")
-- OUTPUT:
(* o o *)
*  ^  *
* --- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:56) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- * ")
print(" ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  * 
 * --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:29) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:40:56) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.218761
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
 *  ^  * 
 * --- * 
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
